PLAYLIST E VIDEO NORMAIS FAZENDO DOWNLOAD.

--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -49,6 +50,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                   </GridPane>
+                  <JFXSpinner layoutX="72.0" layoutY="427.0" progress="0.18" />
                </children>
             </AnchorPane>
         </content>
