--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -32,12 +33,12 @@
             </RadialGradient>
          </unFocusColor>
       </JFXTextField>
-      <JFXButton layoutX="280.0" layoutY="33.0" onAction="#Ok" prefHeight="25.0" prefWidth="79.0" text="OK" />
+      <JFXButton layoutX="280.0" layoutY="33.0" onAction="#Ok" prefHeight="25.0" prefWidth="79.0" styleClass="jfxbutton" text="OK" />
       <ScrollPane fx:id="ScrollPane" layoutX="7.0" layoutY="121.0" pannable="true" prefHeight="505.0" prefWidth="527.0" styleClass="ScrollPane">
         <content>
           <AnchorPane fx:id="scroll" minHeight="0.0" minWidth="0.0" prefHeight="703.0" prefWidth="489.0" styleClass="AnchorPane">
                <children>
-                  <GridPane fx:id="listView" layoutX="-18.0" layoutY="-2.0" prefHeight="390.0" prefWidth="479.0" styleClass="list-view">
+                  <GridPane fx:id="listView" layoutX="-4.0" layoutY="14.0" prefHeight="390.0" prefWidth="479.0" styleClass="list-view">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -53,7 +54,7 @@
             </AnchorPane>
         </content>
       </ScrollPane>
-      <JFXComboBox fx:id="Formato" layoutX="14.0" layoutY="77.0">
+      <JFXComboBox fx:id="Formato" layoutX="14.0" layoutY="77.0" styleClass="jfxcombo-box" stylesheets="@application.css">
          <focusColor>
             <RadialGradient centerX="0.46111111111111114" centerY="0.4666666666666667" radius="0.5">
                <stops>
@@ -87,9 +88,10 @@
                </stops>
             </RadialGradient>
          </unFocusColor></JFXTextField>
-      <JFXButton layoutX="286.0" layoutY="87.0" onAction="#salvarem" text="Salvar em" />
-      <JFXButton layoutX="378.0" layoutY="58.0" onAction="#getmusic" text="Get Music" />
-      <JFXButton layoutX="369.0" layoutY="87.0" onAction="#DownloadAll" text="Download All" />
-      <JFXButton layoutX="378.0" layoutY="33.0" onAction="#SetMetadas" text="Colocar informações" />
+      <JFXButton layoutX="286.0" layoutY="87.0" onAction="#salvarem" styleClass="jfxbutton" text="Salvar em" />
+      <JFXButton layoutX="378.0" layoutY="58.0" onAction="#getmusic" text="Get Music" visible="false" />
+      <JFXButton fx:id="downloadall" layoutX="369.0" layoutY="87.0" onAction="#DownloadAll" styleClass="jfxbutton" text="Download All" visible="false" />
+      <JFXButton layoutX="378.0" layoutY="33.0" onAction="#SetMetadas" styleClass="jfxbutton" text="Colocar informações" visible="false" />
+      <JFXSpinner fx:id="Carregando" layoutX="211.0" layoutY="261.0" visible="false" />
    </children>
 </AnchorPane>
